<?xml version="1.0" encoding="utf-8"?>



<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.JKSoft.TdbClient.app.ActTradeDetail"
    >
    <!-- tools:context="com.JKSoft.TdbClient.app.ActTradeDetail"  úk čemu slouží toto?-->

<GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:columnOrderPreserved="false"
    android:columnCount="3"
    android:orientation="horizontal"
>

    <TextView
        android:layout_column="0"
        style="@style/TradeDetailLabel"
        android:text="@string/label_symbol"
        />

    <TextView
        android:layout_column="1"
        android:id="@+id/tvSymbol"
        style="@style/TradeDetailItem"
        android:text="xxxxx"
        />

    <TextView
        android:layout_column="0"
        style="@style/TradeDetailLabel"
        android:text="@string/label_level"/>


    <TextView
        android:layout_column="1"
        android:id="@+id/tvLevelPrice"
        style="@style/TradeDetailItem"
        android:text="x.xxxx"/>

    <TextView
        android:layout_column="0"
        style="@style/TradeDetailLabel"
        android:text="@string/label_direction"/>

    <TextView
        android:layout_column="1"
        android:id="@+id/tvDirection"
        style="@style/TradeDetailItem"

        android:text="buy"/>


    <TextView
        android:layout_column="0"
        style="@style/TradeDetailLabel"
        android:text="@string/label_level_dist"/>


    <TextView
        android:layout_column="1"
        android:id="@+id/tvLevelDistance"
        style="@style/TradeDetailItem"
        android:text="+xxx"
        android:paddingStart="0dp"
        />

    <TextView
        android:layout_column="0"
        style="@style/TradeDetailLabel"
        android:text="@string/label_ets"/>

    <TextView
        android:layout_column="1"
        android:id="@+id/tvEstimatedTradeStatus"
        style="@style/TradeDetailItem"
        android:text="TS_xxxx"
        />

    <TextView
        android:layout_column="0"
        style="@style/TradeDetailLabel"
        android:text="@string/label_target"/>

    <TextView
        android:layout_column="1"
        android:id="@+id/tvTP"
        style="@style/TradeDetailItem"
        android:text="x.xxxx"/>

    <TextView
        android:layout_column="0"
        style="@style/TradeDetailLabel"
        android:text="@string/label_tp_prop"/>

    <TextView
        android:layout_column="1"
        android:id="@+id/tvTpProposed"
        style="@style/TradeDetailItem"
        android:text="x.xxxx"/>

    <TextView
        android:layout_column="0"
        style="@style/TradeDetailLabel"
        android:text="@string/label_tp_man"/>

    <TextView
        android:layout_column="1"
        android:id="@+id/tvTpManual"
        style="@style/TradeDetailItem"
        android:text="x.xxxx"/>



    <TextView
        android:layout_column="0"
        style="@style/TradeDetailLabel"
        android:text="@string/label_sl"/>

    <TextView
        android:layout_column="1"
        android:id="@+id/tvSL"
        style="@style/TradeDetailItem"
        android:text="x.xxxx"/>


    <TextView
        android:layout_column="0"
        style="@style/TradeDetailLabel"
        android:text="@string/label_sl_pips"/>

    <TextView
        android:layout_column="1"
        android:id="@+id/tvSlPips"
        style="@style/TradeDetailItem"
        android:text="x.xxxx"/>

    <TextView
        android:layout_column="0"
        style="@style/TradeDetailLabel"
        android:text="@string/label_sl_money"/>

    <TextView
        android:layout_column="1"
        android:id="@+id/tvSlMoney"
        style="@style/TradeDetailItem"
        android:text="x.xxxx"/>

    <TextView
        android:layout_column="0"
        style="@style/TradeDetailLabel"
        android:text="@string/label_rrr_plan"/>

    <TextView
        android:layout_column="1"
        android:id="@+id/tvRrrPlanned"
        style="@style/TradeDetailItem"
        android:text="x.xxxx"/>



    <TextView
        android:layout_column="0"
        style="@style/TradeDetailLabel"
        android:text="@string/label_order_status"/>

    <TextView
        android:layout_column="1"
        android:id="@+id/tvOrderStatus"
        style="@style/TradeDetailItem"
        android:text="xxxx"/>

    <TextView
        android:layout_column="0"
        style="@style/TradeDetailLabel"
        android:text="@string/label_order"/>

    <TextView
        android:layout_column="1"
        android:id="@+id/tvOrderNum"
        style="@style/TradeDetailItem"
        android:text="xxxx"/>


    <TextView
        android:layout_column="0"
        style="@style/TradeDetailLabel"
        android:text="@string/label_method"/>

    <TextView
        android:layout_column="1"
        android:id="@+id/tvMethod"
        style="@style/TradeDetailItem"
        android:text="xxxx"/>

    <TextView
        android:layout_column="0"
        style="@style/TradeDetailLabel"
        android:text="@string/label_trade_id"/>

    <TextView
        android:layout_column="1"
        android:id="@+id/tvTradeId"
        style="@style/TradeDetailItem"
        android:text="xxxx"/>

    <TextView
        android:layout_column="0"
        style="@style/TradeDetailLabel"
        android:text="@string/label_record_status"/>

    <TextView
        android:layout_column="1"
        android:id="@+id/tvTradeRecordStatus"
        style="@style/TradeDetailItem"
        android:text="xxxx"/>

</GridLayout>


</ScrollView>





